# ad-paper

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: train.py
src/artificial_dopamine/: ad_layers.py  buffers.py  features_extractors.py
src/artificial_dopamine/algorithms/: __init__.py  ad_dqn.py  ad_mlp.py  ad_qrdqn.py
src/artificial_dopamine/utils/: __init__.py  eval.py  logging.py
